--- a/package.json
+++ b/package.json
@@ -11,37 +11,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.8",
-    "@angular/common": "~11.0.8",
-    "@angular/compiler": "~11.0.8",
-    "@angular/core": "~11.0.8",
-    "@angular/forms": "~11.0.8",
-    "@angular/platform-browser": "~11.0.8",
-    "@angular/platform-browser-dynamic": "~11.0.8",
-    "@angular/router": "~11.0.8",
-    "bootstrap": "~4.5.3",
-    "jquery": "~3.5.1",
-    "rxjs": "~6.6.3",
-    "tslib": "~2.1.0",
-    "zone.js": "~0.10.3"
+    "@angular/animations": "10.2.4",
+    "@angular/common": "10.2.4",
+    "@angular/compiler": "10.2.4",
+    "@angular/core": "10.2.4",
+    "@angular/forms": "10.2.4",
+    "@angular/platform-browser": "10.2.4",
+    "@angular/platform-browser-dynamic": "10.2.4",
+    "@angular/router": "10.2.4",
+    "@ngrx/effects": "10.1.2",
+    "@ngrx/entity": "10.1.2",
+    "@ngrx/store": "10.1.2",
+    "bootstrap": "4.5.3",
+    "jquery": "3.5.1",
+    "rxjs": "6.6.3",
+    "tslib": "2.1.0",
+    "tslint": "^6.0.0",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.6",
-    "@angular/cli": "~11.0.6",
-    "@angular/compiler-cli": "~11.0.8",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "@angular-devkit/build-angular": "0.1002.1",
+    "@angular/cli": "10.2.1",
+    "@angular/compiler-cli": "10.2.4",
+    "@ngrx/schematics": "10.1.2",
+    "@types/jasmine": "3.6.0",
+    "@types/node": "12.11.1",
+    "codelyzer": "6.0.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "5.1.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage": "2.0.3",
+    "karma-jasmine": "4.0.0",
+    "karma-jasmine-html-reporter": "1.5.4",
+    "protractor": "7.0.0",
+    "ts-node": "8.3.0",
+    "typescript": "4.0.2"
   }
 }
