--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@ngrx/effects": "10.1.2",
     "@ngrx/entity": "10.1.2",
     "@ngrx/store": "10.1.2",
+    "@ngrx/store-devtools": "10.1.2",
     "bootstrap": "4.5.3",
     "jquery": "3.5.1",
     "rxjs": "6.6.3",
     "tslib": "2.1.0",
-    "tslint": "^6.0.0",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
@@ -46,6 +46,7 @@
     "karma-jasmine-html-reporter": "1.5.4",
     "protractor": "7.0.0",
     "ts-node": "8.3.0",
+    "tslint": "6.0.0",
     "typescript": "4.0.2"
   }
 }
